--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "framer-motion": "^11.11.11",
     "html-react-parser": "^5.2.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.511.0",
     "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-markdown": "^10.1.0",
     "react-mui-sidebar": "^1.3.8",
     "react-perfect-scrollbar": "^1.5.8",
     "react-pro-sidebar": "^1.1.0",
