--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-markdown": "^10.1.0",
